--- a/practical1/cs111s2018-practical1.tex
+++ b/practical1/cs111s2018-practical1.tex
@@ -24,7 +24,7 @@ also continue to practice using Slack to support communication with the teaching
 %each of them will help you to understand how to use both GitHub and GitHub Classroom. 
 
 \vspace*{-.2in}
-\section*{Using Your Computer Science Account}
+\subsection*{Using Your Computer Science Account}
 \vspace*{-.1in}
 In advance of today's lab you have already received the details about your Alden Hall computer account and learned how
 to log on. You may use this account on any computer in Alden labs 101, 103, or
@@ -50,7 +50,7 @@ Remember to execute a command, you should press ``Enter'' after typing a command
 \end{enumerate}
 
 \vspace*{-.2in}
-\section*{Configuring Git and GitHub}
+\subsection*{Configuring Git and GitHub}
 \vspace*{-.1in}
 
 During the subsequent practical and  laboratory assignments, we will securely communicate
