--- a/slides/week1/IntroCS.tex
+++ b/slides/week1/IntroCS.tex
@@ -26,7 +26,7 @@
 		\item Teaching assistants (\url{http://www.cs.allegheny.edu/teaching/teachingassistants/})
 		\item Sakai (\url{https://sakai.allegheny.edu/})
 		\item Slack channel (more on this later) (\url{https://cs111s2018.slack.com/})
-		\item Bitbucket (more on this later) (\url{https://github.org/})
+		\item Github (more on this later) (\url{https://github.org/})
     \end{itemize}
 \end{frame}
 %%%%%%%%%%%% Slide %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
